--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         </div>
     </section>
 
+    <img src="cartaz de pastelaria.png"width="500" alt="pastelaria">
     <footer>
         <p>&copy;  Confeitaria Ariclenes Bendinha -  Delícias da nossa confeitaria.</p>
     </footer>
